[package]
name = "join-sound-johnson-cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
join-sound-johnson = { git = "https://github.com/smallwoj/join-sound-johnson" }
poise = { version = "0.5.0", features = ["collector", "cache"]}
dotenv = "0.15.0"
argparse = "0.2.2"
